--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
                 <input type="text" required placeholder="Email">
             </div>
             <div> 
-                <button> type="submit">Send</button>
+                <form> 
+                    <button type="submit">Send</button>
+                </form>
             </div>
 
 
