--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                     <h2>Leave your contacts and we will offer you the best safari tours!</h2>
             </div>
             <div>
-                <input type="text" required placeholder="name">
+                <input type="text"  placeholder="name" required>
                 <input type="text" required placeholder="Phone number">
                 <input type="text" required placeholder="Email">
             </div>
