added new sections

--- a/index.html
+++ b/index.html
@@ -6,15 +6,21 @@
     <meta name="viewport" content="width=zzzzz, initial-scale=1.0">
     <title>Document</title>
 </head>
+<main>
     <section class="africa">
-        <h1>Want to See Real Africa?</h1>
             <div class="africa">
                 <img width=300 src="africa-img/tiger.webp" alt="tiger">
-                    <h2>Leave your contacts and we will offer you the best safari tours!</h2>
+                <h1>Want to See Real Africa</h1>
+                    <p><spam>...</spam></p>   
+                <h2>Leave your contacts and we will offer you the best safari tours!</h2>
             </div>
             <div>
-                <input type="text"  placeholder="name" required>
+                <input type="text" required placeholder="Name">
+            </div>
+            <div>
                 <input type="text" required placeholder="Phone number">
+            </div>
+            <div>
                 <input type="text" required placeholder="Email">
             </div>
             <div> 
@@ -22,11 +28,71 @@
                     <button type="submit">Send</button>
                 </form>
             </div>
-
-
     </section>
-
+</main>
 <body>
-    
+    <div>
+        <h1>Additional Services We Provide</h1>
+            <p><spam>...</spam></p>
+    </div>
+        <section class="opening visa"> 
+            <div>
+                <img width=300 src="africa-img/land.webp" alt="land">
+                    <h1>Visa opening</h1>
+                        <p>We provide visa support for citizens of any country. Our experts will advise on all visa issues.</p>
+            </div>
+        </section>
+        <section>
+            <div>
+                <img width=300 src="africa-img/car-travel.webp" alt="car rtavel">
+                    <h1>Private Transfer</h1>
+                        <p>We can arrange a private transfer at the start or end point, book a hotel or offer a continuation of the rest after a safari.</p>
+            </div>
+        </section>
+        <section>
+            <div>
+                <img width=300 src="africa-img/lake.webp" alt="lake">
+                <h1>Photo Report</h1>
+                    <p>For an additional fee, you can get a full photo and video report on the trip, as well as a personal photo shoot.</p>
+            </div>
+        </section>
+        <section>
+            <div>
+                <img width=300 src="africa-img/desert.webp" alt="desert">
+                    <h1>Medical Insurance</h1>
+                        <p>Reliable medical insurance that really covers the risks if something happens while traveling.</p>
+            </div>
+        </section>
+    <section class="reason">
+        <div>
+            <h1>Reasons to Go on Safari</h1>
+                <p><spam>...</spam></p>
+        </div>
+        <div>
+            <img width="100" src="//res2.weblium.site/res/5dae995b993efb002638b1a5/5dde8801ec9cc700212bd3e2" alt="icon">
+                <h1>Experience</h1>
+                    <p>the exotic countries, go beyond the main streets and see the real life.</p>
+        </div>
+        <div>
+            <img width="100" src="//res2.weblium.site/res/5dae995b993efb002638b1a5/5dde87b4ec9cc700212bd1b1" alt="escape">
+                <h1>Escape</h1>
+                    <p>from the bustle of big cities and get closer to the nature as it is.</p>
+        </div>
+        <div>
+            <img width="100" src="from the bustle of big cities and get closer to the nature as it is." alt="lion">
+                <h1>See</h1>
+                <p>wild animals in the flesh. Hurry, as many of them are endangered!</p>
+        </div>
+        <div>
+            <img width="100" src="//res2.weblium.site/res/5dae995b993efb002638b1a5/5dde8842700e1f0021e8bc9d" alt="woman">
+                <h1>Stay</h1>
+                    <p>in the selected lodges and villas on the route, with hot water and AC.</p>
+        </div>
+        <div>
+            <img width="100" src="//res2.weblium.site/res/5dae995b993efb002638b1a5/5dde8889cacc0300216e9804" alt="map">
+                <h1>Travel</h1>
+                    <p>with expert guides and game rangers who know the best spots.</p>
+        </div>
+    </section>
 </body>
 </html>
