changed img link

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <p>from the bustle of big cities and get closer to the nature as it is.</p>
         </div>
         <div>
-            <img width="100" src="from the bustle of big cities and get closer to the nature as it is." alt="lion">
+            <img width="100" src="//res2.weblium.site/res/5dae995b993efb002638b1a5/5dde877da69d2e002149af61" alt="lion">
                 <h1>See</h1>
                 <p>wild animals in the flesh. Hurry, as many of them are endangered!</p>
         </div>
